syntax = "proto3";
package support;
option java_package = "bisq.support.protobuf";
option java_multiple_files = true;
import "user.proto";
import "chat.proto";
import "offer.proto";

message MediationRequest {
  offer.Offer bisqEasyOffer = 1;
  user.UserProfile requester = 2;
  user.UserProfile peer = 3;
  repeated chat.ChatMessage chatMessages = 4;
}

message ReportToModeratorMessage {
  sint64 date = 1;
  string reportSenderUserProfileId = 2;
  string reportedUserProfileId = 3;
  string message = 4;
  chat.ChatChannelDomain chatChannelDomain = 5;
}
message MediationResponse {
  offer.Offer bisqEasyOffer = 1;
}

message BannedUserProfileData {
  string profileId = 1;
  bool staticPublicKeysProvided = 2;
}
message ModeratorStore {
  repeated ReportToModeratorMessage reportToModeratorMessages = 1;
  repeated BannedUserProfileData bannedUserProfileDataSet = 2;
}